# claude-plugin-tester

./: .gitignore  IMPLEMENTATION_GUIDE.md  PROGRESS_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.mycelium/: state.json
.mycelium/context/: existing-tools.md  quality-framework.md  validation-rules.md
.mycelium/plans/: 2026-02-13-plugin-testing.md
docs/: architecture.md
src/: __init__.py  cli.py  runner.py
src/models/: __init__.py  results.py
src/scoring/: __init__.py  structural_scorer.py
src/validators/: __init__.py  base.py  skill_validator.py
tests/unit/: test_runner.py  test_skill_validator.py  test_structural_scorer.py
