[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-plugin-tester"
version = "0.1.0"
description = "Comprehensive testing and quality scoring framework for Claude Code plugins"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jason Hsieh", email = "jason@example.com" }
]
keywords = ["claude", "claude-code", "plugin", "testing", "validation", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/jason-hchsieh/claude-plugin-tester"
Repository = "https://github.com/jason-hchsieh/claude-plugin-tester"
Documentation = "https://github.com/jason-hchsieh/claude-plugin-tester#readme"
Issues = "https://github.com/jason-hchsieh/claude-plugin-tester/issues"

[project.scripts]
claude-plugin-test = "src.cli:main"
plugin-validate = "src.cli:validate"
plugin-score = "src.cli:score"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
